# csre-demo-v1

./: CMakeLists.txt  README.CN.md  README.md
host/: CMakeLists.txt
host/app/csre-comp-example/: CMakeLists.txt  Makefile  csre-comp-example.cpp
host/app/multi-thread/: CMakeLists.txt  csre-mt.cpp
host/app/single-thread/: CMakeLists.txt  csre-st-ocl.cpp  csre-st.cpp
host/core/: core.c
host/include/api/: libcsre-comp.h  libcsre.h
host/include/core/: constants.h  core.h
host/include/recomp/: fregex.h  re_match.h  regex_config.h
host/include/ref/: regex_ref.h
host/include/utils/: xclbin_utils.h  xrt_utils.h
host/ref/: regex_ref.cpp
host/runtime/common/: compile.cpp
host/runtime/ocl/: csre.cpp
host/xcl2/: xcl2.cpp
kernel/: CMakeLists.txt
kernel/cmake/: env.cmake  macros.cmake
kernel/scripts/: add_ila.tcl  gen_csre_xo.tcl  package_kernel.tcl
kernel/src/: csre_kernel_wrapper.v.in  gen_vitis_config.sh.in  kernel.xml.in
scripts/: CMakeLists.txt  bagualu.py  check_regex.sh.in  harvest_dan.sh  package_dan.sh
test/: README.md  cleanup.sh  pre_check.sh  remove_bigfiles.sh  run.sh
test/origin/: regex_hy_1000_origin.txt
test/tclist/: func.tclist  perf.tclist  sim.tclist  var.tclist
test/testdata/: simfiles
test/testdata/quick/: packet_small.txt  packet_small_again.txt  regex_simple_8.txt
test/testdata/specific/: packet_geek_school.txt  regex_hy_1000_modify.txt  regex_hz_10_modify.txt  regex_snort_modify.txt
